[package]
name = "rara-domain-chat"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Chat domain service — session-based conversations backed by LLM agents"

[dependencies]
rara-kernel.workspace = true
async-openai.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
futures.workspace = true
opentelemetry = { version = "0.31.0", default-features = false, features = ["trace"] }
rara-domain-shared.workspace = true
rara-paths.workspace = true
rara-sessions.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tracing.workspace = true
tracing-opentelemetry = "0.32.0"
utoipa.workspace = true
utoipa-axum.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
