[package]
name = "rara-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for rara"

[package.metadata.wix]
upgrade-guid = "3FAE8A69-CCE2-441B-81F1-C9E84D108D7C"
path-guid = "802F55F4-8D88-4862-8DA2-F59A10E1BB35"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Binary definition for cargo-dist
[[bin]]
name = "rara"
path = "src/main.rs"

[dependencies]
base64.workspace = true
chrono.workspace = true
clap = { workspace = true }
common-telemetry.workspace = true
crossterm.workspace = true
dirs.workspace = true
eventsource-stream.workspace = true
futures.workspace = true
indexmap.workspace = true
open.workspace = true
rara-app = { workspace = true }
rara-channels = { workspace = true }
rara-codex-oauth.workspace = true
rara-kernel = { workspace = true }
rara-paths.workspace = true
ratatui.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
shadow-rs = { workspace = true }
snafu.workspace = true
anyhow.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
ulid.workspace = true
uuid.workspace = true
yunara-store.workspace = true

[build-dependencies]
shadow-rs = { workspace = true }

[dev-dependencies]
rara-sessions = { workspace = true }
tempfile.workspace = true

[lints]
workspace = true
