[package]
name = "jobspy-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Embedded Python bridge for python-jobspy with uv-managed runtime setup"

[dependencies]
bon.workspace = true
pyo3 = { version = "0.27", features = ["auto-initialize"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
dirs.workspace = true
ytmusicapi-uv = { git = "https://github.com/crrow/ytmusicapi", package = "ytmusicapi-uv" }

[build-dependencies]
ytmusicapi-uv = { git = "https://github.com/crrow/ytmusicapi", package = "ytmusicapi-uv" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
dirs.workspace = true

[lints]
workspace = true
