[package]
name = "jobspy-sys"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Embedded Python bridge for python-jobspy with uv-managed runtime setup"

[dependencies]
bon.workspace = true
dirs.workspace = true
pyo3 = { version = "0.28", features = ["auto-initialize"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ytmusicapi-uv = { git = "https://github.com/crrow/ytmusicapi", package = "ytmusicapi-uv" }

[build-dependencies]
dirs.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ytmusicapi-uv = { git = "https://github.com/crrow/ytmusicapi", package = "ytmusicapi-uv" }

[lints]
workspace = true
