[package]
name = "rara-kernel"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Unified agent orchestrator: lifecycle, memory, LLM execution, tool dispatch"

[features]
default = []
testing = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true }
backon.workspace = true
base.workspace = true
base64.workspace = true
bon.workspace = true
chrono.workspace = true
common-telemetry.workspace = true
cron = "0.16"
crossbeam-queue.workspace = true
dashmap = "6"
derive_more = { workspace = true }
eventsource-stream.workspace = true
futures.workspace = true
hex.workspace = true
hmac.workspace = true
image.workspace = true
indexmap.workspace = true
jieba-rs.workspace = true
jiff.workspace = true
md5.workspace = true
opendal = { workspace = true }
opentelemetry = { version = "0.31.0", default-features = false, features = ["trace", "metrics"] }
parking_lot.workspace = true
rapidfuzz.workspace = true
rara-browser.workspace = true
rara-domain-shared.workspace = true
rara-paths.workspace = true
rara-soul.workspace = true
rara-stt.workspace = true
rara-tool-macro.workspace = true
regex.workspace = true
reqwest.workspace = true
rustix = { workspace = true, features = ["fs"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
smart-default.workspace = true
snafu.workspace = true
bb8 = "0.9"
diesel.workspace = true
diesel-async.workspace = true
rara-model.workspace = true
yunara-store.workspace = true
strum = { workspace = true, features = ["derive"] }
subtle.workspace = true
tokio.workspace = true
tokio-util = { workspace = true }
tracing.workspace = true
tracing-opentelemetry = "0.32.0"
ulid.workspace = true
unicode-normalization.workspace = true
urlencoding.workspace = true
usearch = "2"
uuid.workspace = true
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
async-trait.workspace = true
chrono.workspace = true
dashmap = "6"
diesel_migrations.workspace = true
rara-domain-shared = { workspace = true, features = ["testing"] }
rara-kernel = { path = ".", features = ["testing"] }
rara-model.workspace = true
serde_json.workspace = true
tempfile.workspace = true
test-case = "^3"
tower.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
