[package]
name = "rara-memory"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Tape-based memory layer for append-only conversation recording"

[dependencies]
derive_more = { workspace = true }
jiff.workspace = true
md5.workspace = true
rara-kernel.workspace = true
regex.workspace = true
rustix = { workspace = true, features = ["fs"] }
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
strum = { workspace = true, features = ["derive"] }
tokio.workspace = true
tracing.workspace = true
urlencoding.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
