[package]
name = "rara-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
humantime-serde = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }
serde_yaml = { workspace = true }

[lints]
workspace = true
