[package]
name = "rara-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
humantime-serde = "1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full", "macros"] }

[lints]
workspace = true
