[package]
name = "job-server"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP and gRPC server implementation for job"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
smart-default = { workspace = true }
# fastrace = { workspace = true }
axum-tracing-opentelemetry = { workspace = true }
futures = { workspace = true }
job-api = { workspace = true }
job-base = { workspace = true }
job-domain-application = { workspace = true }
job-domain-core = { workspace = true }
job-domain-interview = { workspace = true }
job-domain-resume = { workspace = true }
job-error = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
tonic-tracing-opentelemetry = { workspace = true }
tonic-web = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }

[lints]
workspace = true
