[package]
name = "rara-server"
authors.workspace = true
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP and gRPC server implementation for rara"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
derive_more = { workspace = true }
http = { workspace = true }
jiff = { workspace = true }
moka = { workspace = true }
smart-default = { workspace = true }
# fastrace = { workspace = true }
axum-tracing-opentelemetry = { workspace = true }
base = { workspace = true }
common-runtime = { workspace = true }
futures = { workspace = true }
opentelemetry = { version = "0.31.0", default-features = false, features = ["metrics", "trace"] }
tracing-opentelemetry = "0.32.0"
rara-api = { workspace = true }
rara-error = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
tonic-tracing-opentelemetry = { workspace = true }
tonic-web = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
opentelemetry_sdk = { version = "0.31.0", features = ["trace"] }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
