[package]
name = "rara-sessions"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Session metadata persistence — file-based session index"

[dependencies]
async-trait.workspace = true
bb8 = "0.9"
chrono = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
rara-kernel = { workspace = true }
rara-model = { workspace = true }
snafu = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
tracing.workspace = true
yunara-store = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
