[package]
name = "rara-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
flate2 = "1"
notify-debouncer-full = "0.5"
rara-paths.workspace = true
regex = "1"
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9"
snafu.workspace = true
strum = { workspace = true, features = ["derive"] }
strum_macros.workspace = true
tar = "0.4"
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest = "0.25"
tempfile = { workspace = true }
