[package]
name = "rara-symphony"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Autonomous coding agent orchestrator for GitHub Issues"

[dependencies]
async-trait.workspace = true
bon.workspace = true
chrono = { workspace = true, features = ["serde"] }
crossbeam-queue.workspace = true
git2.workspace = true
humantime-serde = "1"
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["process", "time", "sync"] }
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
