[package]
name = "rara-symphony"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Issue tracker ↔ Ralph task synchronization bridge"

[dependencies]
async-trait.workspace = true
bon.workspace = true
chrono = { workspace = true, features = ["serde"] }
humantime-serde = "1"
lineark-sdk.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["process", "time", "sync"] }
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
