[package]
name = "rara-telegram-bot"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Standalone Telegram bot runtime with gRPC command ingress"

[dependencies]
axum = { workspace = true }
rara-domain-job = { workspace = true }
rara-domain-shared = { workspace = true }
rara-server = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smart-default = { workspace = true }
snafu = { workspace = true }
sqlx = { workspace = true }
teloxide = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
yunara-store = { workspace = true }

[lints]
workspace = true
