[package]
name = "rara-telegram-bot"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Standalone Telegram bot runtime for the Job Automation Platform"

[dependencies]
base64 = { workspace = true }
futures = { workspace = true }
rara-domain-job = { workspace = true }
rara-domain-shared = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
smart-default = { workspace = true }
snafu = { workspace = true }
teloxide = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
yunara-store = { workspace = true }

[lints]
workspace = true
