[package]
name = "rara-workers"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Background worker implementations for job automation"

[dependencies]
async-trait.workspace = true
axum = { workspace = true }
chrono = { workspace = true }
common-runtime = { workspace = true }
common-worker = { workspace = true }
crawl4ai = { workspace = true }
croner.workspace = true
jiff.workspace = true
opendal.workspace = true
openrouter-rs = { workspace = true }
rara-agents = { workspace = true }
rara-ai = { workspace = true }
rara-domain-analytics = { workspace = true }
rara-domain-application = { workspace = true }
rara-domain-chat = { workspace = true }
rara-domain-interview = { workspace = true }
rara-domain-job = { workspace = true }
rara-domain-resume = { workspace = true }
rara-domain-scheduler = { workspace = true }
rara-domain-shared = { workspace = true }
rara-domain-typst = { workspace = true }
rara-memory = { workspace = true }
rara-paths = { workspace = true }
rara-server = { workspace = true }
rara-sessions = { workspace = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
sqlx.workspace = true
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing.workspace = true
ulid.workspace = true
uuid.workspace = true
yunara-store = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
